--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Happy Birthday, Lane!</title>
+  <title>For You, Lane</title>
   <style>
     body {
       margin: 0;
       padding: 0;
       font-family: 'Georgia', serif;
-      background: linear-gradient(to right, #f8cdda, #1d2b64);
+      background: linear-gradient(to right, #ff9a9e, #fad0c4);
       color: #fff;
       text-align: center;
       display: flex;
@@ -48,10 +48,11 @@
 </head>
 <body>
   <div class="container">
-    <h1>Lane! Happy Birthday!</h1>
-    <p>I know you work very hard, and I'm always so proud of you. You complete my days, and motivate me to push myself further.</p>
-    <p>My life has been so much brighter since I have met you, and I cannot wait to celebrate you forever!</p>
-    <p class="signature">I love you lots bb - Jack :)</p>
+    <h1>Lane, I love you!</h1>
+    <p>No matter what the day brings, I want you to remember how strong, kind, and incredible you are.</p>
+    <p>Every moment with you is a gift, and I am so lucky to have you in my life.</p>
+    <p>Keep being the amazing person you are, and know that I’ll always be cheering you on.</p>
+    <p class="signature">Yours, Jack ❤️</p>
   </div>
 </body>
 </html>
