--- a/index.html
+++ b/index.html
@@ -8,41 +8,42 @@
     body {
       margin: 0;
       padding: 0;
-      font-family: 'Georgia', serif;
-      background: linear-gradient(to right, #ff9a9e, #fad0c4);
-      color: #fff;
-      text-align: center;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #f4f4f4;
+      color: #333;
       display: flex;
       justify-content: center;
       align-items: center;
       height: 100vh;
+      text-align: center;
     }
     .container {
-      background: rgba(255, 255, 255, 0.1);
-      padding: 40px;
-      border-radius: 15px;
-      box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
-      max-width: 600px;
-      line-height: 1.6;
+      background: #ffffff;
+      padding: 30px;
+      border-radius: 10px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+      max-width: 500px;
+      animation: fadeIn 1.2s ease-in-out;
+    }
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(-10px); }
+      to { opacity: 1; transform: translateY(0); }
     }
     h1 {
-      font-size: 2.5em;
-      color: #ffdd67;
-      margin-bottom: 20px;
-      font-family: 'Brush Script MT', cursive;
-      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4);
+      font-size: 2em;
+      color: #2c3e50;
+      margin-bottom: 15px;
     }
     p {
-      font-size: 1.2em;
-      color: #fff;
-      margin-bottom: 20px;
-      text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
+      font-size: 1.1em;
+      color: #555;
+      line-height: 1.6;
+      margin-bottom: 15px;
     }
     .signature {
-      font-size: 1.1em;
-      color: #ffb3ba;
+      font-size: 1em;
       font-style: italic;
-      text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
+      color: #7f8c8d;
     }
   </style>
 </head>
