--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       margin: 0;
       padding: 0;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #f4f4f4;
+      background: linear-gradient(to bottom, #e3e6e8, #ffffff);
       color: #333;
       display: flex;
       justify-content: center;
@@ -19,31 +19,32 @@
     }
     .container {
       background: #ffffff;
-      padding: 30px;
-      border-radius: 10px;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-      max-width: 500px;
-      animation: fadeIn 1.2s ease-in-out;
+      padding: 35px;
+      border-radius: 12px;
+      box-shadow: 0 5px 15px rgba(0, 0, 0, 0.15);
+      max-width: 550px;
+      animation: fadeIn 1s ease-in-out;
     }
     @keyframes fadeIn {
       from { opacity: 0; transform: translateY(-10px); }
       to { opacity: 1; transform: translateY(0); }
     }
     h1 {
-      font-size: 2em;
-      color: #2c3e50;
-      margin-bottom: 15px;
+      font-size: 2.2em;
+      color: #1a2a3a;
+      margin-bottom: 20px;
     }
     p {
-      font-size: 1.1em;
-      color: #555;
-      line-height: 1.6;
-      margin-bottom: 15px;
+      font-size: 1.15em;
+      color: #444;
+      line-height: 1.7;
+      margin-bottom: 20px;
     }
     .signature {
-      font-size: 1em;
+      font-size: 1.1em;
       font-style: italic;
-      color: #7f8c8d;
+      color: #2c3e50;
+      font-weight: bold;
     }
   </style>
 </head>
