--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       margin: 0;
       padding: 0;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: linear-gradient(to bottom, #e3e6e8, #ffffff);
+      background-color: #f4c2c2;
       color: #333;
       display: flex;
       justify-content: center;
@@ -19,11 +19,12 @@
     }
     .container {
       background: #ffffff;
-      padding: 35px;
-      border-radius: 12px;
-      box-shadow: 0 5px 15px rgba(0, 0, 0, 0.15);
+      padding: 40px;
+      border-radius: 15px;
+      box-shadow: 0 6px 15px rgba(0, 0, 0, 0.2);
       max-width: 550px;
-      animation: fadeIn 1s ease-in-out;
+      animation: fadeIn 1.2s ease-in-out;
+      border: 2px solid #d991a3;
     }
     @keyframes fadeIn {
       from { opacity: 0; transform: translateY(-10px); }
@@ -31,19 +32,19 @@
     }
     h1 {
       font-size: 2.2em;
-      color: #1a2a3a;
+      color: #2c3e50;
       margin-bottom: 20px;
     }
     p {
-      font-size: 1.15em;
-      color: #444;
-      line-height: 1.7;
+      font-size: 1.2em;
+      color: #555;
+      line-height: 1.8;
       margin-bottom: 20px;
     }
     .signature {
       font-size: 1.1em;
       font-style: italic;
-      color: #2c3e50;
+      color: #c0392b;
       font-weight: bold;
     }
   </style>
